schema/testdata/validation_returns_required_with_arbitrary_action_types/schema.keel
message Foo {
  bar Text
}

model Person {
  fields {
    bar Text
  }
  
  functions {
    read getPerson()
    write updatePerson()
  }
}